--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-What a cool porfolio!
+<html>
+    <head>
+
+    </head>
+    <body>
+        <div data-collapse=\"medium\" data-animation=\"default\" data-duration=\"400\" data-easing=\"ease\" data-easing2=\"ease\" role=\"banner\" class=\"navigation-bar w-nav\">
+          <div class=\"w-container\">
+            <a href=\"/\" aria-current=\"page\" class=\"brand-link w-nav-brand w--current\">
+              <h1 class=\"brand-text\">Spencer Seay Design portfolio</h1>
+            </a>
+            <nav role=\"navigation\" class=\"navigation-menu w-nav-menu\">
+              <a href=\"/\" aria-current=\"page\" class=\"navigation-link w-nav-link w--current\">Gallery</a>
+              <a href=\"/blog\" class=\"navigation-link w-nav-link\">Blog</a>
+              <a href=\"/about\" class=\"navigation-link w-nav-link\">About</a>
+            </nav>
+            <div class=\"hamburger-button w-nav-button\">
+              <div class=\"w-icon-nav-menu\"></div>
+            </div>
+          </div>
+        </div>
+        <div class=\"w-container\">
+          <div class=\"w-layout-grid grid\">
+            <div id=\"w-node-_689bdd0f-639c-b032-947e-af3c6e04d6d2-a8915515\" class=\"div-block\">
+              <a href=\"https://miniature-camera-drone.webflow.io/\" class=\"w-inline-block\"><img src=\"images/Drone-Render.png\" loading=\"lazy\" width=\"334\" data-w-id=\"689bdd0f-639c-b032-947e-af3c6e04d6d4\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Drone-Render.png 500w, images/Drone-Render.png 800w, images/Drone-Render.png 1080w, images/Drone-Render.png 1350w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Miniature Camera Drone</div>
+            </div>
+            <div id=\"w-node-_1532cfe2-1fb5-6a91-82be-da6c9353edaa-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/MasterWithRegularTile.png\" loading=\"lazy\" width=\"334\" data-w-id=\"1532cfe2-1fb5-6a91-82be-da6c9353edac\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/MasterWithRegularTile.png 500w, images/MasterWithRegularTile.png 800w, images/MasterWithRegularTile.png 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Infinite Tiles Game</div>
+            </div>
+            <div id=\"w-node-cac1be8a-3be8-419a-2f70-553e0e1ad8f9-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Full-Robot-Render.png\" loading=\"lazy\" width=\"334\" data-w-id=\"cac1be8a-3be8-419a-2f70-553e0e1ad8fb\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Full-Robot-Render.png 500w, images/Full-Robot-Render.png 800w, images/Full-Robot-Render.png 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">FRC Robot 2021</div>
+            </div>
+            <div id=\"w-node-d4163d16-12af-1eb2-2ea3-f407352d1a6b-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Untitled-Project-16.png\" loading=\"lazy\" width=\"334\" data-w-id=\"d4163d16-12af-1eb2-2ea3-f407352d1a6d\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Untitled-Project-16.png 500w, images/Untitled-Project-16.png 800w, images/Untitled-Project-16.png 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Tutorial Intake</div>
+            </div>
+            <div id=\"w-node-ac49c17c-7dcc-e7b7-8d71-92fcb4ab8e39-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Raft-Recovery-Isometric-Field-View-by-2485.png\" loading=\"lazy\" width=\"334\" data-w-id=\"ac49c17c-7dcc-e7b7-8d71-92fcb4ab8e3b\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Raft-Recovery-Isometric-Field-View-by-2485.png 500w, images/Raft-Recovery-Isometric-Field-View-by-2485.png 800w, images/Raft-Recovery-Isometric-Field-View-by-2485.png 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">FRC Game Design Project</div>
+            </div>
+            <div id=\"w-node-_179225bf-3c03-8ca4-9648-520185a67294-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Screenshot-228.png\" loading=\"lazy\" width=\"334\" data-w-id=\"179225bf-3c03-8ca4-9648-520185a67296\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Screenshot-228.png 500w, images/Screenshot-228.png 800w, images/Screenshot-228.png 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Phone Case + Accessories</div>
+            </div>
+            <div id=\"w-node-_45dfb0b9-d8b6-a57f-0541-d8e750ceef92-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Screenshot-230.png\" loading=\"lazy\" width=\"334\" data-w-id=\"45dfb0b9-d8b6-a57f-0541-d8e750ceef94\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Screenshot-230.png 500w, images/Screenshot-230.png 800w, images/Screenshot-230.png 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Cardboard Battlebot V1</div>
+            </div>
+            <div id=\"w-node-_37ea931b-4a6b-6e88-31d4-2c0613888e34-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Gearbox-Render.png\" loading=\"lazy\" width=\"334\" data-w-id=\"37ea931b-4a6b-6e88-31d4-2c0613888e36\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Gearbox-Render.png 500w, images/Gearbox-Render.png 800w, images/Gearbox-Render.png 1080w, images/Gearbox-Render.png 1350w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">3D Printed Gearbox</div>
+            </div>
+            <div id=\"w-node-ef21c544-3896-fa29-79ad-71c1fafca352-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Battlebot-V2.JPG\" loading=\"lazy\" width=\"334\" data-w-id=\"ca9f8c23-791a-6ab3-10d1-54b44f079fa2\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Battlebot-V2.JPG 500w, images/Battlebot-V2.JPG 800w, images/Battlebot-V2.JPG 1080w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Cardboard Battlebot V2</div>
+            </div>
+            <div id=\"w-node-_91ae8f2d-e689-3ee7-864b-fec41834e8d2-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Table-Render-Top-Slanted.png\" loading=\"lazy\" width=\"334\" data-w-id=\"91ae8f2d-e689-3ee7-864b-fec41834e8d4\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Table-Render-Top-Slanted.png 500w, images/Table-Render-Top-Slanted.png 800w, images/Table-Render-Top-Slanted.png 1080w, images/Table-Render-Top-Slanted.png 1350w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Woodworking Table</div>
+            </div>
+            <div id=\"w-node-_09c5f7f4-2efb-ce09-0c22-a49826b3897c-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/Bed.png\" loading=\"lazy\" width=\"334\" data-w-id=\"09c5f7f4-2efb-ce09-0c22-a49826b3897e\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/Bed.png 500w, images/Bed.png 800w, images/Bed.png 1080w, images/Bed.png 1350w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Woodworking Bed</div>
+            </div>
+            <div id=\"w-node-_1e6bea76-8307-d14f-ce31-8bbb22e7fb07-a8915515\" class=\"div-block\">
+              <a href=\"#\" class=\"w-inline-block\"><img src=\"images/EH10-T2.JPG\" loading=\"lazy\" width=\"334\" data-w-id=\"1e6bea76-8307-d14f-ce31-8bbb22e7fb09\" sizes=\"(max-width: 479px) 92vw, 334px\" srcset=\"images/EH10-T2.JPG 500w, images/EH10-T2.JPG 800w, images/EH10-T2.JPG 1080w, images/EH10-T2.JPG 1600w\" alt=\"\" class=\"image-4\"></a>
+              <div class=\"text-block-3 item-title-copy\">Arduino Score Counter</div>
+            </div>
+          </div>
+        </div>
+        <div class=\"section wf-section\"></div>
+        <div class=\"footer sidebar-title wf-section\">
+          <div class=\"container w-container\">
+            <div class=\"text-block\">Contact Me: </div>
+            <div>
+              <a href=\"http://www.linkedin.com/in/spencerseay\" target=\"_blank\" class=\"social-icon-link w-inline-block\"><img src=\"images/linkedin-logo.png\" width=\"30\" height=\"30\" alt=\"\" class=\"image\"></a>
+              <a href=\"mailto:spenseay@stanford.edu\" target=\"_blank\" class=\"social-icon-link w-inline-block\"><img src=\"images/social-30.svg\" width=\"30\" alt=\"\" class=\"image-2\"></a>
+            </div>
+          </div>
+        </div>
+        <script src=\"https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62f1851c5cac0a4ce49154f5\" type=\"text/javascript\" integrity=\"sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=\" crossorigin=\"anonymous\"></script>
+        <script src=\"js/webflow.js\" type=\"text/javascript\"></script>
+        <!-- [if lte IE 9]><script src=\"https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js\"></script><![endif] -->
+      </body>      
+</html>
